[tool.poetry]
name = "simple-clean-code-tasks"
version = "0.1.0"
description = "Simple tasks related to clean code in python book."
authors = ["Ali Hezarpisheh <AliHezarpisheh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.5.0"
pytest-randomly = "^3.15.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.lint.ruff]
line-length = 88
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe
    "D",  # pydocstyle
    "RUF",  # Ruff specific rules
]
ignore = []

fixable = [
    "F401",  # Remove unused imports.
    "RUF100",  # Remove unused noqa comments.
]

[tool.lint.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]


[tool.mypy]
ignore_missing_imports = true


[tool.pylint.messages_control]
# Disable warning about similar lines in multiple files (R0801)
# Disable warning about redefining a name from an outer scope (W0621)
# Disable warning about line too long, this part is handled by ruff (C0301)
# Disable warning about unused variable (W0201)
disable = ["R0801", "W0621", "C0301", "W0201"]

[tool.pylint.messages-control]
disable = [
    "E0001"  # Disable parsing failed error
]
