[tool.poetry]
name = "simple-clean-code-tasks"
version = "0.1.0"
description = "Simple tasks related to clean code in python book."
authors = ["Ali Hezarpisheh <AliHezarpisheh@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.2.0"
coverage-badge = "^1.1.0"
httpx = "^0.26.0"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.lint.ruff]
line-length = 88
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "C90",  # mccabe
    "D",  # pydocstyle
    "RUF",  # Ruff specific rules
]
ignore = []

fixable = [
    "F401",  # Remove unused imports.
    "RUF100",  # Remove unused noqa comments.
]

[tool.lint.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
